package entity;

public class CartItem {

    private String id;
    private String name;
    private double price;

    public CartItem(String id, String name, double price) {
        this.id = id;
        this.name = name;
        this.price = price;
    }

    public String getId() {
        return id;
    }

    public String getName() {
        return name;
    }

    public double getPrice() {
        return price;
    }

    public void setId(String id) {
        this.id = id;
    }

    public void setName(String name) {
        this.name = name;
    }

    public void setPrice(double price) {
        this.price = price;
    }

    public void printItemInfo() {
        System.out.println("id: " + this.id);
        System.out.println("name: " + this.name);
        System.out.println("price: " + this.price + "TRY");
    }
}
