package entity;

public enum CreditCardType {
    VISA,
    MASTERCARD,
    TROY
}
