package entity;

public interface IDisplayable {

    void displayInfo();
}
