package entity;

public interface IPaymentMethod {

    String getName();

    double makeDiscount();
}
